KIK-2666, fix column number wrapping

--- a/app/assets/less/layout/sponsor-portal.less
+++ b/app/assets/less/layout/sponsor-portal.less
@@ -564,6 +564,7 @@
     tbody > tr > td:first-child::before {
       counter-increment: item;
       content: counter(item);
+      white-space: nowrap;
     }
     td, th {
       &:first-child {
